syntax = "proto3";

package audit.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

import "validate/validate.proto";

import "pagination/v1/pagination.proto";

import "audit/service/v1/common.proto";


// Data Access Audit Log Service
service DataAccessAuditLogService {
  // Query data access audit log list
  rpc List (pagination.PagingRequest) returns (ListDataAccessAuditLogResponse) {}

  // Query data access audit log details
  rpc Get (GetDataAccessAuditLogRequest) returns (DataAccessAuditLog) {}

  // Create data access audit log
  rpc Create (CreateDataAccessAuditLogRequest) returns (google.protobuf.Empty) {}
}

// Data Access Audit Log
message DataAccessAuditLog {
  // Data access type
  enum AccessType {
    ACCESS_TYPE_UNSPECIFIED = 0;

    SELECT = 1;   // Read data
    INSERT = 2;   // Insert data
    UPDATE = 3;   // Update data
    DELETE = 4;   // Delete data
    VIEW = 5;     // View data
    EXPORT = 6;   // Export data
    BULK_READ = 7; // Bulk read data

    OTHER = 8;    // Other
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "Data access audit log ID"}
  ]; // Data access audit log ID

  optional uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "Tenant ID"}
  ];  // Tenant ID

  optional string tenant_name = 3 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "Tenant name"}
  ]; // Tenant name

  optional uint32 user_id = 4 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {description: "User ID"}
  ]; // User ID

  optional string username = 5 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {description: "Username"}
  ]; // Username

  optional string ip_address = 10 [
    json_name = "ipAddress",
    (gnostic.openapi.v3.property) = {description: "Operation IP address (IPv4/IPv6)"}
  ]; // Operation IP address (IPv4/IPv6)

  optional string request_id = 11 [
    json_name = "requestId",
    (gnostic.openapi.v3.property) = {description: "Global request ID (linked to gateway logs)"}
  ]; // Request ID

  optional string data_source = 12 [
    json_name = "dataSource",
    (gnostic.openapi.v3.property) = {description: "Data source type (mysql/redis/mongodb/es)"}
  ]; // Data source type (mysql/redis/mongodb/es)

  optional string table_name = 13 [
    json_name = "tableName",
    (gnostic.openapi.v3.property) = {description: "Table name (e.g., sys_users/order_info, key prefix for Redis)"}
  ]; // Table name (e.g., sys_users/order_info, key prefix for Redis)

  optional string data_id = 14 [
    json_name = "dataId",
    (gnostic.openapi.v3.property) = {description: "Data primary key ID (e.g., user ID/order ID, compatible with different table primary key types)"}
  ]; // Data primary key ID (e.g., user ID/order ID, compatible with different table primary key types)

  optional AccessType access_type = 20 [
    json_name = "accessType",
    (gnostic.openapi.v3.property) = {description: "Data access type (SELECT/INSERT/UPDATE/DELETE)"}
  ]; // Data access type (SELECT/INSERT/UPDATE/DELETE)

  optional string sql_digest = 21 [
    json_name = "sqlDigest",
    (gnostic.openapi.v3.property) = {description: "SQL statement digest (MD5)"}
  ]; // SQL statement digest

  optional string sql_text = 22 [
    json_name = "sqlText",
    (gnostic.openapi.v3.property) = {description: "SQL statement (masked, command for Redis)"}
  ]; // SQL statement (masked, command for Redis)

  optional uint32 affected_rows = 23 [
    json_name = "affectedRows",
    (gnostic.openapi.v3.property) = {description: "Affected rows (affected key count for Redis)"}
  ]; // Affected rows (affected key count for Redis)

  optional uint32 latency_ms = 24 [
    json_name = "latencyMs",
    (gnostic.openapi.v3.property) = {description: "Latency (milliseconds)"},
    (validate.rules).uint32.lte = 3600000 // 1 hour
  ]; // Latency

  optional bool success = 25 [
    json_name = "success",
    (gnostic.openapi.v3.property) = {description: "Whether the operation succeeded"}
  ]; // Operation result

  optional SensitiveLevel sensitive_level = 26 [
    json_name = "sensitiveLevel",
    (gnostic.openapi.v3.property) = {description: "Data sensitivity level"}
  ]; // Data sensitivity level

  optional bool data_masked = 30 [
    json_name = "dataMasked",
    (gnostic.openapi.v3.property).description = "Whether data is masked"
  ]; // Whether data is masked

  optional string masking_rules = 31 [
    json_name = "maskingRules",
    (gnostic.openapi.v3.property).description = "Masking rules (JSON: {\"phone\":\"mask_last_4\"})"
  ]; // Masking rules

  optional string business_purpose = 32 [
    json_name = "businessPurpose",
    (gnostic.openapi.v3.property).description = "Business processing purpose",
    (validate.rules).string = {
      min_len: 5,
      pattern: "^\\w+:[a-z0-9_-]+$" // Standardized format: hr:annual_review
    }
  ]; // Business processing purpose

  optional string data_category = 34 [
    json_name = "dataCategory",
    (gnostic.openapi.v3.property).description = "Data category label"
  ];

  optional string db_user = 35 [
    json_name = "dbUser",
    (gnostic.openapi.v3.property).description = "Database user"
  ];

  // ========== Compliance Verification ==========

  optional string log_hash = 40 [
    json_name = "logHash",
    (gnostic.openapi.v3.property).description = "Log content hash (SHA256, hexadecimal string)"
  ]; // Log hash

  optional bytes signature = 41 [
    json_name = "signature",
    (gnostic.openapi.v3.property).description = "Log digital signature (ECDSA, signed content: tenant_id+user_id+created_at+log_hash)"
  ]; // Log digital signature

  // ========== Time Fields ==========

  optional google.protobuf.Timestamp created_at = 50 [
    json_name = "createdAt",
    (gnostic.openapi.v3.property) = {description: "Log creation time"}
  ];// Log creation time
}

// Query data access audit log list - Response
message ListDataAccessAuditLogResponse {
  repeated DataAccessAuditLog items = 1;
  uint64 total = 2;
}

// Query data access audit log details - Request
message GetDataAccessAuditLogRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field filter for controlling returned fields"
    }
  ]; // View field filter for controlling returned fields
}

// Create data access audit log - Request
message CreateDataAccessAuditLogRequest {
  DataAccessAuditLog data = 1;
}
